// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/card/cardfooter > should not render with a testing icon when static results are disabled 1`] = `null`;

exports[`lib/card/cardfooter > should render 1`] = `null`;

exports[`lib/card/cardfooter > should render with a comment icon 1`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  >
    <div
      aria-label="test title Description: comment"
      onBlur={[Function]}
      onFocus={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      style={
        {
          "display": "flex",
        }
      }
    >
      <span
        className="panel-card-v2-badge active"
        data-icon-name="CommentRegular"
        role="button"
      />
    </div>
  </div>
</div>
`;

exports[`lib/card/cardfooter > should render with a connection icon 1`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  >
    <div
      aria-label="test title Connection name: joechung@microsoft.com"
      onBlur={[Function]}
      onFocus={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      style={
        {
          "display": "flex",
        }
      }
    >
      <span
        className="panel-card-v2-badge active"
        data-icon-name="LinkMultipleRegular"
        role="button"
      />
    </div>
  </div>
</div>
`;

exports[`lib/card/cardfooter > should render with a lock icon 1`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  >
    <div
      aria-label="test title Secure inputs or outputs enabled: This operation has secure inputs or outputs enabled."
      onBlur={[Function]}
      onFocus={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      style={
        {
          "display": "flex",
        }
      }
    >
      <span
        className="panel-card-v2-badge active"
        data-icon-name="LockClosedRegular"
        role="button"
      />
    </div>
  </div>
</div>
`;

exports[`lib/card/cardfooter > should render with a testing icon 1`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  >
    <div
      aria-label="test title Testing: This action has testing configured."
      onBlur={[Function]}
      onFocus={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
      style={
        {
          "display": "flex",
        }
      }
    >
      <span
        className="panel-card-v2-badge active"
        data-icon-name="BeakerRegular"
        role="button"
      />
    </div>
  </div>
</div>
`;

exports[`lib/card/cardfooter > should render with an inactive connection icon 1`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  >
    <span
      aria-label="Connection required"
      className="panel-card-v2-badge inactive"
      data-icon-name="LinkMultipleRegular"
      tabIndex={0}
    />
  </div>
</div>
`;
